force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/LLC_BI__Product_Catalog_Route_Template__c.object-meta.xml
<CustomObject>
    <description>Stores settings for a route to be generated for a new Product Catalog entry.</description>
    <label>Product Catalog Route Template</label>
    <nameField>
        <label>Product Catalog Route Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalog Route Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>