force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Product_Catalog_UI_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Catalog_UI_Template__c</fullName>
    <description>Maps this route template to its parent template record</description>
    <inlineHelpText>Which Product Catalog UI Template is this Route Template associated with?</inlineHelpText>
    <label>Product Catalog UI Template</label>
    <referenceTo>LLC_BI__Product_Catalog_UI_Template__c</referenceTo>
    <relationshipLabel>Product Catalog Route Templates</relationshipLabel>
    <relationshipName>Product_Catalog_Route_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>