force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Route_Body__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Route_Body__c</fullName>
    <description>Defines the body contents of the route (VisualForce page name)</description>
    <inlineHelpText>What page will be displayed in the body of this route? Can be left blank.</inlineHelpText>
    <label>Route Body</label>
    <length>50</length>
    <type>Text</type>
</CustomField>