force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Route_Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Route_Icon_Class__c</fullName>
    <description>Icon set used for the Route</description>
    <inlineHelpText>What icon set will be used?</inlineHelpText>
    <label>Route Icon Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>