force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Route_Navigation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Route_Navigation__c</fullName>
    <description>The navigation component used for the route</description>
    <inlineHelpText>What navigation component will be used?</inlineHelpText>
    <label>Route Navigation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>