force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Route_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Route_Order__c</fullName>
    <description>The numeric order used for sorting routes in the same route group.</description>
    <inlineHelpText>What sorting order number will be assigned to this route? This will decide its placement among other routes in the same group.</inlineHelpText>
    <label>Route Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>