force-app/main/default/objects/LLC_BI__Product_Catalog_Route_Template__c/fields/LLC_BI__Screen_Section_Resource__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Screen_Section_Resource__c</fullName>
    <description>Name of the screen section resource type to be used for this route</description>
    <inlineHelpText>Which screen section resource should be used for this route?</inlineHelpText>
    <label>Screen Section Resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>